--- a/users/addOre.html
+++ b/users/addOre.html
@@ -49,12 +49,6 @@
 			(function($, doc) {
 				$.init();
 				$.ready(function() {
-					/**
-					 * 获取对象属性的值
-					 * 主要用于过滤三级联动中，可能出现的最低级的数据不存在的情况，实际开发中需要注意这一点；
-					 * @param {Object} obj 对象
-					 * @param {String} param 属性名
-					 */
 					var _getParam = function(obj, param) {
 						return obj[param] || '';
 					};
@@ -66,11 +60,12 @@
 					}]);
 					var showUserPickerButton = doc.getElementById('showUserPicker');
 					var userResult = doc.getElementById('showUserPicker');
+					var Input = doc.getElementsByTagName("input");
 					showUserPickerButton.addEventListener('tap', function(event) {
+						Input[1].blur();
+						Input[2].blur();
 						userPicker.show(function(items) {
 							userResult.value = items[0].text;
-							//返回 false 可以阻止选择框的关闭
-							//return false;
 						});
 					}, false);
 				});
