--- a/users/barcode.html
+++ b/users/barcode.html
@@ -14,16 +14,14 @@
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">添加矿机</h1>
+			<a class="complete_btn" onclick="scanPicture()">相册</a>
 		</header>
 		<div id="bcid">
 			<div style="height:40%"></div>
-			<p class="tip">...载入中...</p>
+			<p class="tip">载入中...</p>
 		</div>
-		<footer>
-			<div class="fbt mui-action-back">取　 消</div>
-			<div class="fbt" onclick="scanPicture()">从相册选择二维码</div>
-		</footer>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/qrcode.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			var ws = null,
 				wo = null;
@@ -39,14 +37,16 @@
 				wo = ws.opener();
 				// 开始扫描
 				ws.addEventListener('show', function() {
-					scan = new plus.barcode.Barcode('bcid');
+					scan = new plus.barcode.Barcode('bcid', [plus.barcode.QR, plus.barcode.EAN8, plus.barcode.EAN13], {
+						frameColor: '#4384c5',
+						scanbarColor: '#4384c5'
+					});
 					scan.onmarked = onmarked;
 					scan.start({
 						conserve: true,
 						filename: '_doc/barcode/'
 					});
-				}, false);
-				// 显示页面并关闭等待框
+				});// 显示页面并关闭等待框
 				ws.show('pop-in');
 				wo.evalJS('closeWaiting()');
 			}
@@ -54,7 +54,6 @@
 				plusReady();
 			} else {
 				document.addEventListener('plusready', plusReady, false);
-				plusReady();
 			}
 			// 监听DOMContentLoaded事件
 			document.addEventListener('DOMContentLoaded', function() {
@@ -79,7 +78,9 @@
 				}
 				result = result.replace(/\r\n/g, '');
 				wo.evalJS("scaned('" + type + "','" + result + "','" + file + "');");
-				alert('扫码成功')
+				// back();
+				// alert('扫描二维码成功');
+				mui.toast('扫描二维码成功',{ duration: 2000, type:'div' })
 				let time = null;
 				clearTimeout(time);
 				setTimeout(function() {
