--- a/pages/market.html
+++ b/pages/market.html
@@ -22,7 +22,7 @@
 				<li>涨跌幅</li>
 			</ul>
 			<!--内容-->
-			<ul class="market_body">
+			<ul class="market_body newact" url="/public/trade.html"> 
 				<li>
 					<div class="grey_text">DCAR</div>
 					<div class="public_text">ETH</div>
@@ -50,6 +50,7 @@
 			</ul>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-2.1.1.min.js"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
