--- a/public/trade.html
+++ b/public/trade.html
@@ -16,29 +16,151 @@
 		</header>
 		<div class="mui-content">
 			<ul class="trade_nav">
-				<li>
-					<span class="active_state choose">BTC</span>
+				<li class="choose active_state">
+					<span>BTC</span>
 				</li>
-				<li>
-					<span class="grey_state choose">ETH</span>
+				<li class="choose grey_state">
+					<span>ETH</span>
 				</li>
 			</ul>
 			<div class="mui-row trade_main">
-				<div class="mui-col-sm-7 mui-col-xs-7">
-				55
+				<div class="mui-col-sm-7 mui-col-xs-7 left_main">
+					<ul class="group_btn">
+						<li class="green_btn">买入</li>
+						<li class="grey_btn">卖出</li>
+					</ul>
+					<p class="grey_word">
+						限价
+						<img src="../img/icon_down.png" alt="" />
+					</p>
+					<div class="input_box">
+						<input type="text" value="0.005556" />
+						<div class="operate_box">
+							<img src="../img/minus.png" alt="" />
+							<img src="../img/plus.png" alt="" />
+						</div>
+					</div>
+					<p class="grey_word">≈0.0000CNY</p>
+					<div class="input_box">
+						<input type="text" placeholder="数量(DCAR)" />
+						<div class="operate_box">
+							<img src="../img/minus.png" alt="" />
+							<img src="../img/plus.png" alt="" />
+						</div>
+					</div>
+					<p class="grey_word">
+						可用
+						<span class="orange_word">5.4567</span> BTC
+					</p>
+					<div class="mui-input-row mui-input-range">
+						<input type="range" id='block-range' value="0" min="0" max="100">
+					</div>
+					<div class="sliding_box">
+						<input type="range" value="10" min="0" max="100"/>
+					</div>
+					<!--滑块-->
+					<!--<div id="Demo" class="progressTime">
+
+						<div id="Main">
+
+							<div id="scrollBar">
+
+								<div id="scroll_Track"></div>
+
+								<div id="scroll_Thumb"></div>
+
+							</div>
+
+							<p id="scrollBarTxt" style="text-align:center;"></p>
+
+							<div id="progressBar">
+
+								<div id="progressBar_Track"></div>
+
+							</div>
+
+							<p id="progressBarTxt" style="text-align:center;"></p>
+
+						</div>
+
+					</div>-->
+					<ul class="sliding_alert">
+						<li>0%</li>
+						<li>25%</li>
+						<li>50%</li>
+						<li>75%</li>
+						<li>100%</li>
+					</ul>
+					<div class="green_block">买入DCAR</div>
 				</div>
 				<div class="mui-col-sm-5 mui-col-xs-5">
-					55
+					<p class="green_title">45456.225</p>
+					<ul class="top_data">
+						<li class="mini_grey">≈0.000$</li>
+						<li class="orange_word">-11.88%</li>
+					</ul>
+					<ul class="data_title">
+						<li>价格(BTC)</li>
+						<li>数量(DCAR)</li>
+					</ul>
+					<!--数据-->
+					<div class="data_box">
+						<ul class="each_data">
+							<li class="orange_word">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="orange_word">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="orange_word">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="orange_word">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="orange_word">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+					</div>
+					<div>
+						<ul class="each_data">
+							<li class="mini_green">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="mini_green">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="mini_green">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="mini_green">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+						<ul class="each_data">
+							<li class="mini_green">4567.5555</li>
+							<li class="mini_grey">1.000</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/RangeSlider.js"></script>
 		<script src="../js/jquery-2.1.1.min.js"></script>
+		<script src="http://www.jq22.com/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
 			$('.choose').click(function() {
 				$(this).addClass('active_state').removeClass("grey_state").siblings().addClass('grey_state').removeClass('active_state');
 			})
+			$('input').RangeSlider({ min: 0,   max: 100,  step: 0.1,  callback: change});
 		</script>
 	</body>
 
