--- a/pages/market.html
+++ b/pages/market.html
@@ -35,7 +35,7 @@
 					<span class="green_block">+ 39.47%</span>
 				</li>
 			</ul>
-			<ul class="market_body">
+			<ul class="market_body newact" url="/public/echarts.html">
 				<li>
 					<div class="grey_text">DCAR</div>
 					<div class="public_text">ETH</div>
