--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -15,7 +15,7 @@
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">矿机管理</h1>
-			<i class="iconfont icon-saoma saoma_btn newact" url="/users/barcode.html" onclick="clicked(this.id)"></i>
+			<i class="iconfont icon-saoma saoma_btn newact" url="/users/barcode.html"></i>
 			<i class="iconfont icon-shebeiguanli complete_btn" id="manage"></i>
 		</header>
 		<div class="mui-content between">
