--- a/property/account-main.html
+++ b/property/account-main.html
@@ -22,10 +22,10 @@
 			<div class="wallet_title account_title"></div>
 			<div class="wallet_address">nshsaidyia...akhasduaydsy</div>
 			<div class="mui-row dcar_money" id="showAll">
-				<div class="mui-col-sm-6 mui-col-xs-6">
+				<div class="mui-col-sm-12 mui-col-xs-12"">
 					当前余额：<span class="orange_text">2566.00</span> DCAR
 				</div>
-				<div class="mui-col-sm-6 mui-col-xs-6">
+				<div class="mui-col-sm-12 mui-col-xs-12" style="padding-top:10px;">
 					矿收：<span class="green_text">2866.00</span> DCAR
 				</div>
 			</div>
