--- a/property/import-wallet.html
+++ b/property/import-wallet.html
@@ -15,7 +15,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title"></h1>
-			<i class="iconfont icon-saoma saoma_btn newact"></i>
+			<i class="iconfont icon-saoma saoma_btn newact" url="code.html"></i>
 		</header>
 		<div class="mui-content">
 			<ul class="import_nav">
