--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -31,7 +31,7 @@
 						</div>
 						<div class="miner_word">
 							<p>算力值&nbsp;&nbsp;<span>44077.86</span>KH/S</p>
-							<p>矿机地址&nbsp;&nbsp;dwsdffsafafagagdgfghdfgd</p>
+							<p>矿机地址 dwsdffsafafagagdgfghdfgd</p>
 						</div>
 					</div>
 				</div>
