--- a/public/trade.html
+++ b/public/trade.html
@@ -12,7 +12,8 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">买入</h1>
+		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		    <h1 class="mui-title">买入</h1>
 		</header>
 		<div class="mui-content">
 			<ul class="trade_nav">
@@ -56,7 +57,7 @@
 						<input type="range" id='block-range' value="0" min="0" max="100">
 					</div>
 					<div class="sliding_box">
-						<input type="range" value="10" min="0" max="100"/>
+						<input type="range" value="10" />
 					</div>
 					<!--滑块-->
 					<!--<div id="Demo" class="progressTime">
@@ -160,7 +161,43 @@
 			$('.choose').click(function() {
 				$(this).addClass('active_state').removeClass("grey_state").siblings().addClass('grey_state').removeClass('active_state');
 			})
-			$('input').RangeSlider({ min: 0,   max: 100,  step: 0.1,  callback: change});
+			var change = function($input) {
+				/*内容可自行定义*/
+				console.log("123");
+			}
+			$('input').RangeSlider({
+				min: 0,
+				max: 100,
+				step: 0.1,
+				callback: change
+			});
+			$.fn.RangeSlider = function(cfg) {
+				this.sliderCfg = {
+					min: cfg && !isNaN(parseFloat(cfg.min)) ? Number(cfg.min) : null,
+					max: cfg && !isNaN(parseFloat(cfg.max)) ? Number(cfg.max) : null,
+					step: cfg && Number(cfg.step) ? cfg.step : 1,
+					callback: cfg && cfg.callback ? cfg.callback : null
+				};
+
+				var $input = $(this);
+				var min = this.sliderCfg.min;
+				var max = this.sliderCfg.max;
+				var step = this.sliderCfg.step;
+				var callback = this.sliderCfg.callback;
+
+				$input.attr('min', min)
+					.attr('max', max)
+					.attr('step', step);
+
+				$input.bind("input", function(e) {
+					$input.attr('value', this.value);
+					$input.css('background-size', this.value + '% 100%');
+
+					if($.isFunction(callback)) {
+						callback(this);
+					}
+				});
+			};
 		</script>
 	</body>
 
