--- a/public/echarts.html
+++ b/public/echarts.html
@@ -41,7 +41,12 @@
 			<div id="main" style="width: 100%; min-height: 220px;"></div>
 			<div class="summary">
 				<h5>简介</h5>
+				<p>笛卡尔要建里数字金融时代的超级公链，希望打破各个区块链独立封闭的价值孤岛困境，解决传统金融与数字金融无法相容的难题。笛卡尔提供完善的金融功能，支持记录元数据，充分释放各类资产的流动性，发掘资产潜在价值。笛卡尔正在成为链接整个数字货币世界与传统金融世界的关键基础设施，促进全球数字金融生态茂盛生长。</p>
 			</div>
+		</div>
+		<div class="footer">
+			<button class="newact" url="/public/trade.html">买入</button>
+			<button class="newact" url="/public/trade.html">卖出</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
