--- a/pages/market.html
+++ b/pages/market.html
@@ -22,7 +22,7 @@
 				<li>涨跌幅</li>
 			</ul>
 			<!--内容-->
-			<ul class="market_body newact" url="/public/trade.html"> 
+			<ul class="market_body newact" url="/public/echarts.html"> 
 				<li>
 					<div class="grey_text">DCAR</div>
 					<div class="public_text">ETH</div>
