--- a/public/echarts.html
+++ b/public/echarts.html
@@ -45,8 +45,10 @@
 			</div>
 		</div>
 		<div class="footer">
-			<button class="newact" url="/public/trade.html">买入</button>
-			<button class="newact" url="/public/trade.html">卖出</button>
+			<div class="footer_main">
+				<button class="newact" url="/public/trade.html">买入</button>
+				<button class="newact" url="/public/trade.html">卖出</button>
+			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
