--- a/public/echarts.html
+++ b/public/echarts.html
@@ -29,14 +29,31 @@
 				</div>
 			</div>
 			<div class="nav">
-				<ul>
+				<ul class="unit">
 					<li>分时</li>
 					<li>15分</li>
 					<li>1小时</li>
 					<li>4小时</li>
 					<li>日线</li>
-					<li>指标</li>
+					<li id="quota">指标</li>
 				</ul>
+				<div class="norm_detail" id="norm_detail">
+					<ul>
+						<li>主图</li>
+						<li>|</li>
+						<li id="ma5">MA5</li>
+						<li id="ma10">MA10</li>
+						<li>隐藏</li>
+					</ul>
+					<ul>
+						<li>副图</li>
+						<li>|</li>
+						<li>MACD</li>
+						<li>KDJ</li>
+						<li>RSL</li>
+						<li>隐藏</li>
+					</ul>
+				</div>
 			</div>
 			<div id="main" style="width: 100%; min-height: 220px;"></div>
 			<div class="summary">
@@ -56,6 +73,7 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			
 			var myChart = echarts.init(document.getElementById('main'));
 
 			var rawData = [
@@ -437,20 +455,38 @@
 					}
 				}]
 			};
-			option.series.push({
-				name: 'MA5',
-				type: 'line',
-				data: dataMA5,
-				smooth: true,
-				showSymbol: false,
-				lineStyle: {
-					normal: {
-						width: 1
-					}
-				}
-			});
 
 			myChart.setOption(option);
+			
+			$("#quota").on("click", function() {
+				$("#norm_detail").toggle();
+			})
+			$("#ma5").on("click", function() {
+				if($(this).hasClass("norm_active")) {
+					$(this).removeClass("norm_active")
+					for (var i=0;i<option.series.length;i++){
+						if (option.series[i].name == "MA5"){
+							option.series.splice(i, 1);
+						}
+					}
+					myChart.setOption(option);
+				} else {
+					$(this).addClass("norm_active")
+					option.series.push({
+						name: 'MA5',
+						type: 'line',
+						data: dataMA5,
+						smooth: true,
+						showSymbol: false,
+						lineStyle: {
+							normal: {
+								width: 1
+							}
+						}
+					});
+				}
+				myChart.setOption(option);
+			})
 		</script>
 	</body>
 
