--- a/public/trade.html
+++ b/public/trade.html
@@ -12,8 +12,8 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">买入</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title"></h1>
 		</header>
 		<div class="mui-content">
 			<ul class="trade_nav">
@@ -27,8 +27,8 @@
 			<div class="mui-row trade_main">
 				<div class="mui-col-sm-7 mui-col-xs-7 left_main">
 					<ul class="group_btn">
-						<li class="green_btn">买入</li>
-						<li class="grey_btn">卖出</li>
+						<li class="buy_btn">买入</li>
+						<li class="sell_btn">卖出</li>
 					</ul>
 					<p class="grey_word">
 						限价
@@ -57,34 +57,9 @@
 						<input type="range" id='block-range' value="0" min="0" max="100">
 					</div>
 					<div class="sliding_box">
-						<input type="range" value="10" />
+						<div class="green_bg"></div>
+						<input type="range" value="10" id="slideBox" />
 					</div>
-					<!--滑块-->
-					<!--<div id="Demo" class="progressTime">
-
-						<div id="Main">
-
-							<div id="scrollBar">
-
-								<div id="scroll_Track"></div>
-
-								<div id="scroll_Thumb"></div>
-
-							</div>
-
-							<p id="scrollBarTxt" style="text-align:center;"></p>
-
-							<div id="progressBar">
-
-								<div id="progressBar_Track"></div>
-
-							</div>
-
-							<p id="progressBarTxt" style="text-align:center;"></p>
-
-						</div>
-
-					</div>-->
 					<ul class="sliding_alert">
 						<li>0%</li>
 						<li>25%</li>
@@ -92,7 +67,7 @@
 						<li>75%</li>
 						<li>100%</li>
 					</ul>
-					<div class="green_block">买入DCAR</div>
+					<div class="block_btn">买入DCAR</div>
 				</div>
 				<div class="mui-col-sm-5 mui-col-xs-5">
 					<p class="green_title">45456.225</p>
@@ -161,43 +136,29 @@
 			$('.choose').click(function() {
 				$(this).addClass('active_state').removeClass("grey_state").siblings().addClass('grey_state').removeClass('active_state');
 			})
-			var change = function($input) {
-				/*内容可自行定义*/
-				console.log("123");
-			}
-			$('input').RangeSlider({
-				min: 0,
-				max: 100,
-				step: 0.1,
-				callback: change
-			});
-			$.fn.RangeSlider = function(cfg) {
-				this.sliderCfg = {
-					min: cfg && !isNaN(parseFloat(cfg.min)) ? Number(cfg.min) : null,
-					max: cfg && !isNaN(parseFloat(cfg.max)) ? Number(cfg.max) : null,
-					step: cfg && Number(cfg.step) ? cfg.step : 1,
-					callback: cfg && cfg.callback ? cfg.callback : null
-				};
-
-				var $input = $(this);
-				var min = this.sliderCfg.min;
-				var max = this.sliderCfg.max;
-				var step = this.sliderCfg.step;
-				var callback = this.sliderCfg.callback;
-
-				$input.attr('min', min)
-					.attr('max', max)
-					.attr('step', step);
-
-				$input.bind("input", function(e) {
-					$input.attr('value', this.value);
-					$input.css('background-size', this.value + '% 100%');
-
-					if($.isFunction(callback)) {
-						callback(this);
-					}
-				});
-			};
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				targetId = self.targetId;
+				// 判断钱包类型
+				if(targetId == 'buy') {
+					$('.mui-title').html('买入');
+					$('.buy_btn').addClass('green_btn');
+					$('.sell_btn').addClass('grey_btn');
+					$('.block_btn').html('买入DCAR');
+					$('.block_btn').addClass('green_block')
+				} else if(targetId == 'sell') {
+					$('.mui-title').html('卖出');
+					$('.buy_btn').addClass('grey_btn');
+					$('.sell_btn').addClass('orange_btn');
+					$('.block_btn').html('卖出DCAR');
+					$('.block_btn').addClass('orange_block');
+				}
+			})
+			$('#slideBox').mousedown(function() {
+				$('#slideBox').mousemove(function() {
+					console.log($(this).val());
+				})
+			})
 		</script>
 	</body>
 
