new  dcar wallet page

--- a/pages/property.html
+++ b/pages/property.html
@@ -16,7 +16,7 @@
 		</header>
 		<div class="mui-content property_main">
 			<!--无-->
-			<div class="property_card blue_bg" onclick="import_wallet('dcar')">
+			<div class="property_card blue_bg newact" url="/property/create-wallet.html">
 				<span>新建DCAR钱包</span>
 			</div>
 			<div class="property_card yellow_bg" onclick="import_wallet('ETH')">
