--- a/property/create-wallet-success.html
+++ b/property/create-wallet-success.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>新建DCAR钱包</title>
+		<title>创建钱包完成--去备份</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 	</head>
@@ -11,10 +11,10 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">创建钱包</h1>
+		    <h1 class="mui-title">备份钱包</h1>
 		</header>
 		<div class="mui-content">
-			创建钱包
+			备份钱包
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript">
