--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -30,7 +30,7 @@
 			    <input name="checkbox1" id="isagree" value="Item 1" type="checkbox" checked>
 			    <label>我同意<a>《用户协议》</a></label>
 			</div>
-			<button type="button" class="mui-btn mui-btn-primary" id="zhuce">注册</button>
+			<button type="button" class="mui-btn mui-btn-primary can" id="zhuce">注册</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
