add create-wallet page

--- a/property/create-wallet-success.html
+++ b/property/create-wallet-success.html
@@ -6,23 +6,26 @@
 		<title>创建钱包完成--去备份</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/iconfont.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/createWalletSuccess.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/iconfont.css" />
+		<link rel="stylesheet" type="text/css" href="../css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../css/createWalletSuccess.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">备份钱包</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">备份钱包</h1>
 		</header>
 		<div class="mui-content between">
 			<i class="iconfont icon-beifen"></i>
 			<h5>最后一步：立即备份你的钱包！</h5>
 			<p>备份钱包：导出[助记词]并抄写到安全的地方，千万不要保存到网络上。然后尝试转入，转出小额资产开始使用。</p>
-			<button type="button" class="mui-btn mui-btn-primary">备份钱包</button>
+			<button type="button" class="mui-btn mui-btn-primary newact" url="/property/backup-wallet.html">备份钱包</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-2.1.1.min.js"></script>
+		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
