--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -21,27 +21,69 @@
 					密码用于保护私钥和交易授权，强度非常重要。DCAR不存储密码，也无法帮您找回，请务必牢记
 				</div>
 				<div class="mui-input-row info">
-					<input type="text" class="mui-input-clear" placeholder="请输入钱包名称">
+					<input type="text" value="" id="purseName" class="mui-input-clear" placeholder="请输入钱包名称">
 				</div>
 				<div class="mui-input-row info">
-					<input type="password" class="mui-input-password" placeholder="请输入钱包密码">
+					<input type="password" value="" id="pass" class="mui-input-password" placeholder="请输入钱包密码">
 				</div>
 				<div class="mui-input-row info">
-					<input type="password" class="mui-input-password" placeholder="请再次输入钱包密码">
+					<input type="password" value="" id="ensurePass" class="mui-input-password" placeholder="请再次输入钱包密码">
 				</div>
 				<div class="mui-input-row mui-checkbox agreement">
 					<input name="checkbox1" id="isagree" value="Item 1" type="checkbox" checked>
 					<label>我已仔细阅读并同意<a>《用户协议》</a></label>
 				</div>
-				<div class="backup_button newact"  url="/property/create-wallet-success.html">创建钱包</div>
+				<div class="backup_button can" id="create">创建钱包</div>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/jquery-2.1.1.min.js"></script>
+		<script src="../js/web3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
+			$("#isagree").on("change", function(){
+				if ($("#isagree").is(":checked")) {
+					$("#create").removeClass("cannot")
+					$("#create").addClass("can")
+				} else {
+					$("#create").removeClass("can")
+					$("#create").addClass("cannot")
+				}
+			})
+			$("#create").on("click", function(){
+				if ($("#purseName").val() == "") {
+					mui.toast('钱包名称不能为空',{ duration: 2000, type:'div' })
+				} else if ($("#pass").val() == "") {
+					mui.toast('密码不能为空',{ duration: 2000, type:'div' })
+				} else if ($("#ensurePass").val() == "") {
+					mui.toast('请再次输入密码',{ duration: 2000, type:'div' })
+				} else if ($("#pass").val() != $("#ensurePass").val()) {
+					mui.toast('两次密码不一致',{ duration: 2000, type:'div' })
+				} else {
+					if ($("#isagree").is(":checked")) {
+						var web3 = new Web3();
+						// 用户输入密码
+						let password = $("#pass").val();
+						// 创建账户(生成私钥、地址)
+						let account = web3.eth.accounts.create();
+						console.log(account)
+						// 根据用户输入的密码加密私钥，生成 Keystore 文件
+						let keystore = JSON.stringify(account.encrypt(password));
+						console.log(keystore)
+//						mui.openWindow({
+//							url: '/property/create-wallet-success.html',
+//							id: '/property/create-wallet-success.html',
+//							waiting: {
+//								autoShow: false,
+//							}
+//						})
+					} else {
+						mui.toast('用户协议未勾选',{ duration: 2000, type:'div' })
+					}
+				}
+		   })
 		</script>
 	</body>
 
