--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -37,6 +37,7 @@
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/store/dist/store.legacy.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/jquery-2.1.1.min.js"></script>
@@ -54,34 +55,45 @@
 			})
 			$("#create").on("click", function(){
 				if ($("#purseName").val() == "") {
-					mui.toast('钱包名称不能为空',{ duration: 2000, type:'div' })
-				} else if ($("#pass").val() == "") {
-					mui.toast('密码不能为空',{ duration: 2000, type:'div' })
-				} else if ($("#ensurePass").val() == "") {
-					mui.toast('请再次输入密码',{ duration: 2000, type:'div' })
-				} else if ($("#pass").val() != $("#ensurePass").val()) {
-					mui.toast('两次密码不一致',{ duration: 2000, type:'div' })
-				} else {
-					if ($("#isagree").is(":checked")) {
-						var web3 = new Web3();
-						// 用户输入密码
-						let password = $("#pass").val();
-						// 创建账户(生成私钥、地址)
-						let account = web3.eth.accounts.create();
-						console.log(account)
-						// 根据用户输入的密码加密私钥，生成 Keystore 文件
-						let keystore = JSON.stringify(account.encrypt(password));
-						console.log(keystore)
-//						mui.openWindow({
-//							url: '/property/create-wallet-success.html',
-//							id: '/property/create-wallet-success.html',
-//							waiting: {
-//								autoShow: false,
-//							}
-//						})
-					} else {
-						mui.toast('用户协议未勾选',{ duration: 2000, type:'div' })
+					mui.toast('钱包名称不能为空');
+					return false;
+				} 
+				if ($("#pass").val() == "") {
+					mui.toast('密码不能为空');
+					return false;
+				}
+				if ($("#ensurePass").val() == "") {
+					mui.toast('请再次输入密码');
+					return false;
+				} 
+				if ($("#pass").val() != $("#ensurePass").val()) {
+					mui.toast('两次密码不一致');
+					return false;
+				}
+				if ($("#isagree").is(":checked")) {
+					mui.showLoading("加载中...","div")
+					var web3 = new Web3();
+					// 用户输入密码
+					var password = $("#pass").val();
+					// 创建账户(生成私钥、地址)
+					var account = web3.eth.accounts.create();
+					console.log(account);
+					// 根据用户输入的密码加密私钥，生成 Keystore 文件
+					var keystore = JSON.stringify(account.encrypt(password));
+					console.log(keystore);
+					if (keystore){
+						let arr = JSON.parse(localStorage.getItem("dcarPurse"));
+						arr.push(account);
+						mui.toast('钱包创建成功',{ duration: 2000, type:'div' });
+//						let time = null;
+//						clearTimeout(time);
+//						setTimeout(function(){
+//							plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
+//							plus.webview.currentWebview().close();
+//						}, 1000);
 					}
+				} else {
+					mui.toast('用户协议未勾选');
 				}
 		   })
 		</script>
