--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -82,15 +82,16 @@
 					var keystore = JSON.stringify(account.encrypt(password));
 					console.log(keystore);
 					if (keystore){
-						let arr = JSON.parse(localStorage.getItem("dcarPurse"));
+						let arr = store.get('dcarPurse');
 						arr.push(account);
+						store.set('dcarPurse', arr)
 						mui.toast('钱包创建成功',{ duration: 2000, type:'div' });
-//						let time = null;
-//						clearTimeout(time);
-//						setTimeout(function(){
-//							plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
-//							plus.webview.currentWebview().close();
-//						}, 1000);
+						let time = null;
+						clearTimeout(time);
+						setTimeout(function(){
+							plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
+							plus.webview.currentWebview().close();
+						}, 1000);
 					}
 				} else {
 					mui.toast('用户协议未勾选');
